2.0 (#20)
* Distributed events across multiple files

* Rewrote all command classes for better code readability

* Rewrote all command classes for better code readability

* Rewrote all command classes for better code readability

* Fixed messages

* Fixed Typo, added Config option for debug information

* Fixed paths and permission names

* Changed signatures and fixed imports

* Added custom chart to see amount of spectators

* ...

* Wrote utility classes for better readability

* Entirely rewritten

* Fixed, now used per world

* methods for cycle were refactored

* Refactoring

* Refactoring, fixed dupe bug

* Helper class not needed in plugin

* Updated to version 2.0

* Removed unneccessary classes

* Delayed gamemode message to not spam in spectators chat

* Removed unnecessary check, fixed gamemode message spam in chat

* Fixed duplicate messaging during cycle